Use new immutable collections where it makes sense